misc4.0/etl/etl4/components/servicemesh-control-plane/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: istio-system
    argocd.argoproj.io/managed-by: openshift-gitops
  name: istio-system
